--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="/recipes/lasagna.html" target="_blank">Lasagna Recipe</a>
+        <ul>
+            <li>
+                <a href="./recipes/lasagna.html" target="_blank">Lasagna Recipe</a>
+            </li>
+            <li>
+                <a href="./recipes/biryani.html" target="_blank">Chicken Biryani Recipe</a>
+            </li>
+            <li>
+                <a href="./recipes/spaghetti_bolognese.html" target="_blank">Spaghetti Bolognese Recipe</a>
+            </li>
+        </ul>
     </body>
 </html>
