--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,7 +4,30 @@
         <title></title>
     </head>
     <body>
-        <h1>Lasagna Recipes</h1>
-        
+        <h1>Lasagna Recipe</h1>
+        <img src="../images/Extra_Easy_Lasagna_006_4x3-41b0a478514c43e9baed0659bd362625.webp" alt="error in image">
+        <p>
+            In other regions, lasagna can be made with various combinations of ricotta or mozzarella cheese, tomato sauce, meats (such as ground beef, pork or chicken), and vegetables (such as spinach, zucchini, olives, mushrooms), and the dish is typically flavoured with wine, garlic, onion, and oregano.
+        </p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Meat</li>
+            <li>Onion and garlic</li>
+            <li>Tomato products</li>
+            <li>Sugar</li>
+            <li>Spices and seasonings</li>
+            <li>Lasagna noodles</li>
+            <li>Cheeses</li>
+            <li>Egg</li>
+        </ul>
+        <h3>How to make Lasagna step-by-step</h3>
+        <ol>
+            <li>Make the meat sauce.</li>
+            <li>Cook the noodles.</li>
+            <li>Make the ricotta mixture.</li>
+            <li>Layer the lasagna according to the recipe instructions.</li>
+            <li>Cover with foil and bake.</li>
+            <li>Let the lasagna rest before serving.</li>
+        </ol>
     </body>
 </html>
